--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,52 @@
 body {
     font-family: Montserrat, sans-serif;
-
     background-color: white;
 }
-
 .container {
     display: flex;
     flex-direction: column;
     max-width: 80%;
     margin: 5% 10%;
-
-
 }
-/*******************header******************/
-.header__container {
+/******************* header ******************/
+.header {
     text-transform: uppercase;
     display: flex;
     justify-content: space-between;
-
     margin-bottom: 5%;
 }
-.header__container-logo {
+.header__logo {
     font-size: 2em;
+    letter-spacing: 2px;
 }
-
-.header__container-nav--list {
+.header__logo:hover {
+    color: red;
+}
+.header__nav {
     display: flex;
     list-style: none;
-    font-size: 1em;
+    font-size: 0.8em;
+    letter-spacing: 2px;
 }
-/*******************main******************/
-.main__container{
+.header__nav--link, a {
+    margin-right: 10%;
+}
+/******************* main ******************/
+.main{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-bottom: 10%;
+    margin-bottom: 4.5%;
 }
-.main__container-card {
+.main__card {
     width: 30%;
 }
-.main__container-card--img {
+.main__card--img {
     max-width: 100%;
 }
-.main__container-card--imageTitle {
+.main__card--imageTitle {
     margin-top: 5%;
     margin-bottom: 15%;
     text-align: center;
@@ -54,31 +56,56 @@ body {
     color: #333;
     letter-spacing: 1px;
 }
-
-
-
-/*******************footer******************/
+/******************* footer ******************/
 .footer{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .footer__socialMedia {
-
     padding: 10px;
-    margin: 0 20px 0 20px;
     opacity: 0.87;
     display: flex;
     justify-content: center;
 }
 .footer__h3 {
-    margin-top: 3%;
+    margin-top: 1%;
     margin-bottom: 5%;
     color: #bbb;
-    font-size: 1em;
+    font-size: 0.8em;
     letter-spacing: 1px;
     text-transform: uppercase;
     display: flex;
     justify-content: center;
-
+}
+.footer__socialMedia--icon {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+/******************* meedia queries ******************/
+@media only screen and (max-width:768px) {
+    .container {
+        max-width: 100%;
+        margin: 5% 2%;
+    }
+    .main{
+        display: flex;
+       
+    }
+    .main__card {
+        width: 100%;
+    }
+    .main__card--img {
+        max-width: 100%;
+    }
+    .main__card--imageTitle {
+        margin-top: 5%;
+        margin-bottom: 10%;
+        text-align: center;
+        text-transform: uppercase;
+        font-family: Montserrat, sans-serif;
+        font-size: 0.8em;
+        color: #333;
+        letter-spacing: 1px;
+    }
 }
