responsiveness done! + menu burger + :hover fixing

--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,17 @@ body {
 }
 .header__nav {
     display: flex;
+    flex-direction: row;
+    gap: 1rem;
     list-style: none;
     font-size: 0.8em;
     letter-spacing: 2px;
 }
-.header__nav--link, a {
-    margin-right: 10%;
+
+.header__burger {
+    display: none;
 }
+
 /******************* main ******************/
 .main{
     display: flex;
@@ -40,13 +44,22 @@ body {
     flex-wrap: wrap;
     margin-bottom: 4.5%;
 }
+
 .main__card {
     width: 30%;
+    transition-duration: .5s;
 }
-.main__card--img {
-    max-width: 100%;
+
+.main__card:hover {
+    transition-duration: .5s;
+    opacity: 0.7;
+    transform: scale(1.03);
 }
-.main__card--imageTitle {
+
+.main__card-img {
+    width: 100%;
+}
+.main__card-imageTitle {
     margin-top: 5%;
     margin-bottom: 15%;
     text-align: center;
@@ -95,10 +108,10 @@ body {
     .main__card {
         width: 100%;
     }
-    .main__card--img {
+    .main__card-img {
         max-width: 100%;
     }
-    .main__card--imageTitle {
+    .main__card-imageTitle {
         margin-top: 5%;
         margin-bottom: 10%;
         text-align: center;
@@ -107,5 +120,13 @@ body {
         font-size: 0.8em;
         color: #333;
         letter-spacing: 1px;
+    }
+
+    .header__nav {
+        display: none;
+    }
+
+    .header__burger {
+        display: block;
     }
 }
